// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Response entity Tests: decorator createControllerDecorator responseEntitie accepted() 1`] = `
Object {
  "header": Object {
    "connection": "close",
    "content-length": "4",
    "content-type": "application/json; charset=utf-8",
    "etag": "W/\\"4-K+iMpCQsduglOsYkdIUQZQMtaDM\\"",
    "x-powered-by": "Express",
  },
  "req": Object {
    "data": undefined,
    "headers": Object {},
    "method": "GET",
  },
  "status": 202,
  "text": "null",
}
`;

exports[`Response entity Tests: decorator createControllerDecorator responseEntitie badRequest() 1`] = `
Object {
  "header": Object {
    "connection": "close",
    "content-length": "4",
    "content-type": "application/json; charset=utf-8",
    "etag": "W/\\"4-K+iMpCQsduglOsYkdIUQZQMtaDM\\"",
    "x-powered-by": "Express",
  },
  "req": Object {
    "data": undefined,
    "headers": Object {},
    "method": "GET",
  },
  "status": 400,
  "text": "null",
}
`;

exports[`Response entity Tests: decorator createControllerDecorator responseEntitie noContent() 1`] = `
Object {
  "header": Object {
    "connection": "close",
    "etag": "W/\\"4-K+iMpCQsduglOsYkdIUQZQMtaDM\\"",
    "x-powered-by": "Express",
  },
  "req": Object {
    "data": undefined,
    "headers": Object {},
    "method": "GET",
  },
  "status": 204,
  "text": "",
}
`;

exports[`Response entity Tests: decorator createControllerDecorator responseEntitie notFound() 1`] = `
Object {
  "header": Object {
    "connection": "close",
    "content-length": "4",
    "content-type": "application/json; charset=utf-8",
    "etag": "W/\\"4-K+iMpCQsduglOsYkdIUQZQMtaDM\\"",
    "x-powered-by": "Express",
  },
  "req": Object {
    "data": undefined,
    "headers": Object {},
    "method": "GET",
  },
  "status": 404,
  "text": "null",
}
`;

exports[`Response entity Tests: decorator createControllerDecorator responseEntitie ok() 1`] = `
Object {
  "header": Object {
    "connection": "close",
    "content-length": "0",
    "content-type": "application/json; charset=utf-8",
    "x-powered-by": "Express",
  },
  "req": Object {
    "data": undefined,
    "headers": Object {},
    "method": "GET",
  },
  "status": 200,
  "text": "",
}
`;

exports[`Response entity Tests: decorator createControllerDecorator responseEntitie ok({get: 'get'}) 1`] = `
Object {
  "header": Object {
    "connection": "close",
    "content-length": "13",
    "content-type": "application/json; charset=utf-8",
    "etag": "W/\\"d-Lc+tjcJImP8Sf1HWyafiv3+lfrc\\"",
    "x-powered-by": "Express",
  },
  "req": Object {
    "data": undefined,
    "headers": Object {},
    "method": "GET",
  },
  "status": 200,
  "text": "{\\"get\\":\\"get\\"}",
}
`;

exports[`Response entity Tests: decorator createControllerDecorator should work for async responseEntitie controller methods 1`] = `
Object {
  "header": Object {
    "connection": "close",
    "content-length": "13",
    "content-type": "application/json; charset=utf-8",
    "etag": "W/\\"d-navs5TfboJktcSL9TcDVd7fN4Zk\\"",
    "x-powered-by": "Express",
  },
  "req": Object {
    "data": undefined,
    "headers": Object {},
    "method": "GET",
  },
  "status": 200,
  "text": "{\\"get\\":\\"GET\\"}",
}
`;

exports[`Response entity Tests: decorator createControllerDecorator should work for responseEntitie and custom Header controller methods 1`] = `
Object {
  "header": Object {
    "connection": "close",
    "content-length": "13",
    "content-type": "application/json; charset=utf-8",
    "etag": "W/\\"d-navs5TfboJktcSL9TcDVd7fN4Zk\\"",
    "x-powered-by": "Express",
    "x-test": "tests",
  },
  "req": Object {
    "data": undefined,
    "headers": Object {},
    "method": "GET",
  },
  "status": 200,
  "text": "{\\"get\\":\\"GET\\"}",
}
`;

exports[`Response entity Tests: decorator createControllerDecorator should work for responseEntitie controller methods 1`] = `
Object {
  "header": Object {
    "connection": "close",
    "content-length": "13",
    "content-type": "application/json; charset=utf-8",
    "etag": "W/\\"d-navs5TfboJktcSL9TcDVd7fN4Zk\\"",
    "x-powered-by": "Express",
  },
  "req": Object {
    "data": undefined,
    "headers": Object {},
    "method": "GET",
  },
  "status": 200,
  "text": "{\\"get\\":\\"GET\\"}",
}
`;

exports[`Response entity Tests: decorator createRestControllerDecorator responseEntitie accepted() 1`] = `
Object {
  "header": Object {
    "connection": "close",
    "content-length": "4",
    "content-type": "application/json; charset=utf-8",
    "etag": "W/\\"4-K+iMpCQsduglOsYkdIUQZQMtaDM\\"",
    "x-powered-by": "Express",
  },
  "req": Object {
    "data": undefined,
    "headers": Object {},
    "method": "GET",
  },
  "status": 202,
  "text": "null",
}
`;

exports[`Response entity Tests: decorator createRestControllerDecorator responseEntitie badRequest() 1`] = `
Object {
  "header": Object {
    "connection": "close",
    "content-length": "4",
    "content-type": "application/json; charset=utf-8",
    "etag": "W/\\"4-K+iMpCQsduglOsYkdIUQZQMtaDM\\"",
    "x-powered-by": "Express",
  },
  "req": Object {
    "data": undefined,
    "headers": Object {},
    "method": "GET",
  },
  "status": 400,
  "text": "null",
}
`;

exports[`Response entity Tests: decorator createRestControllerDecorator responseEntitie noContent() 1`] = `
Object {
  "header": Object {
    "connection": "close",
    "etag": "W/\\"4-K+iMpCQsduglOsYkdIUQZQMtaDM\\"",
    "x-powered-by": "Express",
  },
  "req": Object {
    "data": undefined,
    "headers": Object {},
    "method": "GET",
  },
  "status": 204,
  "text": "",
}
`;

exports[`Response entity Tests: decorator createRestControllerDecorator responseEntitie notFound() 1`] = `
Object {
  "header": Object {
    "connection": "close",
    "content-length": "4",
    "content-type": "application/json; charset=utf-8",
    "etag": "W/\\"4-K+iMpCQsduglOsYkdIUQZQMtaDM\\"",
    "x-powered-by": "Express",
  },
  "req": Object {
    "data": undefined,
    "headers": Object {},
    "method": "GET",
  },
  "status": 404,
  "text": "null",
}
`;

exports[`Response entity Tests: decorator createRestControllerDecorator responseEntitie ok() 1`] = `
Object {
  "header": Object {
    "connection": "close",
    "content-length": "0",
    "content-type": "application/json; charset=utf-8",
    "x-powered-by": "Express",
  },
  "req": Object {
    "data": undefined,
    "headers": Object {},
    "method": "GET",
  },
  "status": 200,
  "text": "",
}
`;

exports[`Response entity Tests: decorator createRestControllerDecorator responseEntitie ok({get: 'get'}) 1`] = `
Object {
  "header": Object {
    "connection": "close",
    "content-length": "13",
    "content-type": "application/json; charset=utf-8",
    "etag": "W/\\"d-Lc+tjcJImP8Sf1HWyafiv3+lfrc\\"",
    "x-powered-by": "Express",
  },
  "req": Object {
    "data": undefined,
    "headers": Object {},
    "method": "GET",
  },
  "status": 200,
  "text": "{\\"get\\":\\"get\\"}",
}
`;

exports[`Response entity Tests: decorator createRestControllerDecorator should work for async responseEntitie controller methods 1`] = `
Object {
  "header": Object {
    "connection": "close",
    "content-length": "13",
    "content-type": "application/json; charset=utf-8",
    "etag": "W/\\"d-navs5TfboJktcSL9TcDVd7fN4Zk\\"",
    "x-powered-by": "Express",
  },
  "req": Object {
    "data": undefined,
    "headers": Object {},
    "method": "GET",
  },
  "status": 200,
  "text": "{\\"get\\":\\"GET\\"}",
}
`;

exports[`Response entity Tests: decorator createRestControllerDecorator should work for responseEntitie and custom Header controller methods 1`] = `
Object {
  "header": Object {
    "connection": "close",
    "content-length": "13",
    "content-type": "application/json; charset=utf-8",
    "etag": "W/\\"d-navs5TfboJktcSL9TcDVd7fN4Zk\\"",
    "x-powered-by": "Express",
    "x-test": "tests",
  },
  "req": Object {
    "data": undefined,
    "headers": Object {},
    "method": "GET",
  },
  "status": 200,
  "text": "{\\"get\\":\\"GET\\"}",
}
`;

exports[`Response entity Tests: decorator createRestControllerDecorator should work for responseEntitie controller methods 1`] = `
Object {
  "header": Object {
    "connection": "close",
    "content-length": "13",
    "content-type": "application/json; charset=utf-8",
    "etag": "W/\\"d-navs5TfboJktcSL9TcDVd7fN4Zk\\"",
    "x-powered-by": "Express",
  },
  "req": Object {
    "data": undefined,
    "headers": Object {},
    "method": "GET",
  },
  "status": 200,
  "text": "{\\"get\\":\\"GET\\"}",
}
`;
